# repo-manage-util

./: Cargo.toml  README.md  example-config.toml
.github/workflows/: rust.yml
src/: alpm_helper.rs  config.rs  logger.rs  main.rs  pkg_utils.rs  repo_utils.rs  utils.rs
