[package]
name = "repo-manage-util"
version = "0.1.0"
edition = "2021"

[dependencies]
alpm = { version = "3", features = ["checkver", "generate"], default-features = false }
anyhow = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
log = "0.4"
rand = { version = "0.8", features = ["std", "std_rng"], default-features = false }
serde = { version = "1", features = ["derive"] }
subprocess = "0.2"
toml = "0.8"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
